--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css"/>
-    <title>Room 11</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
+    <title>Security/Privacy Room</title>
     <style>
         html {
             font-size:   14px;
@@ -94,12 +94,12 @@
 <body>
 <div class="container">
     <p class="info">These "Do's" and "Don'ts" are <strong>not</strong> rules, but rather <em>guidelines</em> on proper
-        etiquette for the <a href="http://chat.stackoverflow.com/rooms/11/php">PHP Chatroom</a>. Following them helps keeps 
+        etiquette for the <a href="https://chat.stackoverflow.com/rooms/106068/security-privacy">Security/Privacy Chatroom</a>. Following them helps keeps 
         the room clutter free, user friendly, and reduces annoyances.</p>
         
     <p class="info">Try to think of these as "tips" for making the room better for everyone.</p>
 
-    <h1>PHP Chatroom</h1>
+    <h1>Security/Privacy Chatroom</h1>
 
     <h3>Chatroom Do's</h3>
     <ol>
@@ -142,7 +142,7 @@
         <li id="dont_3"><p>Ask to ask a question. <em>"I have a problem, can anyone help?!"</em></p>
             <span class="description">Please just ask your question and wait patiently for other people to answer.</span>
         </li>
-        <li id="dont_4"><p>Ask JavaScript questions here. That's what the <a href="http://chat.stackoverflow.com/rooms/17/javascript">JavaScript Room</a> is for.</p></li>
+        <li id="dont_4"><p>Ask JavaScript questions here (unless security related). That's what the <a href="https://chat.stackoverflow.com/rooms/17/javascript">JavaScript Room</a> is for.</p></li>
         <li id="dont_5"><p>Repeat the same question. Every 30 seconds, since no-one replied to you yet!</p>
             <span class="description">We are offering help for free here so please be patient. If somebody wants to help you, they will.</span>
         </li>
