re-title and remove non-security IDs

--- a/canonical.html
+++ b/canonical.html
@@ -4,18 +4,9 @@
     <script>
     var categories = {
 
-        'debugging': [
-            12769982, 8028957, 845021, 16959576, 22745662, 13840429, 23446377
-        ],
+        // '': [
 
-        'design': [
-            16356420, 5863870, 5166087, 151969, 254514, 2418473, 3430181, 4361553, 4595964, 254514
-        ],
-
-        'general': [
-            12859942, 15966812, 17364127, 2005079, 279170, 3577641, 7094118, 10057671, 931407, 676824,
-            22937618, 20563772, 3737139, 15813490, 15990857, 29308898
-        ],
+        // ],
 
         'security': [
             12026842, 134099, 3115559, 4795385, 60174, 520237, 129677
@@ -23,10 +14,10 @@
     };
     </script>
     <meta charset='UTF-8'>
-    <title>Canonical Questions - Room 11</title>
+    <title>Canonical Questions - Security/Privacy Room</title>
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
     <link rel='icon' href='favicon.ico' type='image/x-icon'>
-    <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css'>
+    <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css'>
     <style>
         html {
             font-size: 14px;
