--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 <footer>
     <small>This page's source can be found and edited on <a
-            href="https://github.com/Room-11/Room-11.github.io">GitHub</a>.
+            href="https://github.com/security-privacy/security-privacy.github.io">GitHub</a>.
     </small>
 </footer>
 
